# SDL_Net_Start

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Name_Generator_lib/: NameGen_Main.cpp
Server/: CMakeLists.txt  Server_main.cpp
Show me image/: CMakeLists.txt
